--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
   "name": "jsonnet",
   "version": "0.5.0-beta",
-  "description": "jsonnet wrapper for Node.js",
+  "description": "Node.js wrapper for Jsonnet",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "mocha --require intelli-espower-loader"
-  },
-  "directories": {
-    "test": "test/"
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha --exit tests/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yosuke-furukawa/node-jsonnet"
+    "url": "https://github.com/rbicker/node-jsonnet"
   },
   "keywords": [
     "jsonnet",
     "json"
   ],
-  "author": "yosuke-furukawa",
+  "author": "Raphael Bicker",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yosuke-furukawa/node-jsonnet/issues"
+    "url": "https://github.com/rbicker/node-jsonnet/issues"
   },
-  "homepage": "https://github.com/yosuke-furukawa/node-jsonnet",
-  "dependencies": {
-    "espower-loader": "^0.8.0",
-    "intelli-espower-loader": "^0.3.0",
-    "mocha": "^1.21.4",
-    "power-assert": "^0.8.0"
+  "homepage": "https://github.com/rbicker/node-jsonnet",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-eslint": "9.0.0",
+    "chai": "^4.1.2",
+    "eslint": "5.12.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "mocha": "^5.0.0",
+    "nodemon": "^1.18.7"
   }
 }
